# p-math

./: README  matrix.h  vector.h  vector_stream.h
examples/: funext_win32.cc
include/: algorithm.h  portal.h  vector.h
include/services/: portal.h
include/utils/: algorithm.h  log.h  vector.h  vector_stream.h
src/: portal.cpp
src/services/: portal.cpp
src/utils/: CMakeLists.txt  log.cpp
src/utils/unittest/: CMakeLists.txt  test_vector.cpp  vector_test.cpp
unittest/: CMakeLists.txt  cmake_config  matrix_test.cpp  run-unittest.sh  vector_test.cpp
